add clock class bem

--- a/src/styles/components/ProgressBar.scss
+++ b/src/styles/components/ProgressBar.scss
@@ -19,6 +19,10 @@
       background-color: orangered;
     }
 
+    &--color-green {
+      background-color: greenyellow;
+    }
+
     &--big {
       height: 50%;
     }
