add uttils prettyDir

--- a/src/styles/components/ProgressBar.scss
+++ b/src/styles/components/ProgressBar.scss
@@ -15,11 +15,11 @@
       background-color: black;
     }
 
-    &--color-red {
+    &--color-red > div {
       background-color: orangered;
     }
 
-    &--color-green {
+    &--color-green > div {
       background-color: greenyellow;
     }
 
