add a lot new functionlaity

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -4,3 +4,4 @@
 @import "components/TimeBox.scss";
 @import "components/TimeBoxCreator.scss";
 @import "components/TimeBoxEditor.scss";
+@import "components/LoginForm.scss";
