--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -1,3 +1,11 @@
 .inactive {
     filter: blur(2px) grayscale(1);
   }
+
+.logout {
+  cursor: pointer;
+  display: flex;
+  justify-content: flex-end;
+  font-weight: 600;
+  color: blue;
+}
